--- a/index.html
+++ b/index.html
@@ -2,15 +2,18 @@
 <html lang="sk">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>Title</title>
-    <script src="script.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <link rel="stylesheet" href="style.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
+    <script src="script.js"></script>
+    <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <nav>
-        <ul id="menu"></ul>
-    </nav>
+
+<ul id="menu" class="menu"></ul>
+
 
 <script type="module" src="MenuComponent.js"></script>
 </body>
