--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
 <ul id="menu" class="menu"></ul>
 
+<p id="counter" class="counter"></p>
 
 <script type="module" src="MenuComponent.js"></script>
 </body>
