--- a/hra_vlckova.html
+++ b/hra_vlckova.html
@@ -12,7 +12,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>NYU JigSaw Puzzle</title>
+    
     <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
     <link rel="stylesheet" href="/resources/demos/style.css">
     <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
@@ -34,39 +34,39 @@
         <h1>PUZZLE DEMO</h1>
         <div id="containerModal">
             <div id="pieceContainerModal">
-                <div class="pic1" STYLE="position:absolute; TOP:10px; LEFT:20px;" class="ui-widget-content">
+                <div id="pic1" STYLE="position:absolute; TOP:10px; LEFT:20px;" class="ui-widget-content">
                     <img src="pics_vlckova/pic1.jpg">
                 </div>
 
-                <div class="pic2" STYLE="position:absolute; TOP:50px; LEFT:30px;" class="ui-widget-content">
+                <div id="pic2" STYLE="position:absolute; TOP:50px; LEFT:30px;" class="ui-widget-content">
                     <img src="pics_vlckova/pic2.jpg">
                 </div>
 
-                <div class="pic3" STYLE="position:absolute; TOP:90px; LEFT:50px;" class="ui-widget-content">
+                <div id="pic3" STYLE="position:absolute; TOP:90px; LEFT:50px;" class="ui-widget-content">
                     <img src="pics_vlckova/pic3.jpg">
                 </div>
 
-                <div class="pic4" STYLE="position:absolute; TOP:100px; LEFT:100px;" class="ui-widget-content">
+                <div id="pic4" STYLE="position:absolute; TOP:100px; LEFT:100px;" class="ui-widget-content">
                     <img src="pics_vlckova/pic4.jpg">
                 </div>
 
-                <div class="pic5" STYLE="position:absolute; TOP:100px; LEFT:70px;" class="ui-widget-content">
+                <div id="pic5" STYLE="position:absolute; TOP:100px; LEFT:70px;" class="ui-widget-content">
                     <img src="pics_vlckova/pic5.jpg">
                 </div>
 
-                <div class="pic6" STYLE="position:absolute; TOP:70px; LEFT:160px;" class="ui-widget-content">
+                <div id="pic6" STYLE="position:absolute; TOP:70px; LEFT:160px;" class="ui-widget-content">
                     <img src="pics_vlckova/pic6.jpg">
                 </div>
 
-                <div class="pic7" STYLE="position:absolute; TOP:100px; LEFT:80px;" class="ui-widget-content">
+                <div id="pic7" STYLE="position:absolute; TOP:100px; LEFT:80px;" class="ui-widget-content">
                     <img src="pics_vlckova/pic7.jpg">
                 </div>
 
-                <div class="pic8" STYLE="position:absolute; TOP:30px; LEFT:140px;" class="ui-widget-content">
+                <div id="pic8" STYLE="position:absolute; TOP:30px; LEFT:140px;" class="ui-widget-content">
                     <img src="pics_vlckova/pic8.jpg">
                 </div>
 
-                <div class="pic9" STYLE="position:absolute; TOP:40px; LEFT:180px;" class="ui-widget-content">
+                <div id="pic9" STYLE="position:absolute; TOP:40px; LEFT:180px;" class="ui-widget-content">
                     <img src="pics_vlckova/pic9.jpg">
                 </div>
             </div>
