--- a/hra_vlckova.html
+++ b/hra_vlckova.html
@@ -34,39 +34,39 @@
         <h1>PUZZLE DEMO</h1>
         <div id="containerModal">
             <div id="pieceContainerModal">
-                <div id="pic1" STYLE="position:absolute; TOP:10px; LEFT:20px;" class="ui-widget-content">
+                <div class="pic1" STYLE="position:absolute; TOP:10px; LEFT:20px;" class="ui-widget-content">
                     <img src="pics_vlckova/pic1.jpg" alt="pic1">
                 </div>
 
-                <div id="pic2" STYLE="position:absolute; TOP:50px; LEFT:30px;" class="ui-widget-content">
+                <div class="pic2" STYLE="position:absolute; TOP:50px; LEFT:30px;" class="ui-widget-content">
                     <img src="pics_vlckova/pic2.jpg" alt="pic2">
                 </div>
 
-                <div id="pic3" STYLE="position:absolute; TOP:90px; LEFT:50px;" class="ui-widget-content">
+                <div class="pic3" STYLE="position:absolute; TOP:90px; LEFT:50px;" class="ui-widget-content">
                     <img src="pics_vlckova/pic3.jpg" alt="pic3">
                 </div>
 
-                <div id="pic4" STYLE="position:absolute; TOP:100px; LEFT:100px;" class="ui-widget-content">
+                <div class="pic4" STYLE="position:absolute; TOP:100px; LEFT:100px;" class="ui-widget-content">
                     <img src="pics_vlckova/pic4.jpg" alt="pic4">
                 </div>
 
-                <div id="pic5" STYLE="position:absolute; TOP:100px; LEFT:70px;" class="ui-widget-content">
+                <div class="pic5" STYLE="position:absolute; TOP:100px; LEFT:70px;" class="ui-widget-content">
                     <img src="pics_vlckova/pic5.jpg" alt="pic5">
                 </div>
 
-                <div id="pic6" STYLE="position:absolute; TOP:70px; LEFT:160px;" class="ui-widget-content">
+                <div class="pic6" STYLE="position:absolute; TOP:70px; LEFT:160px;" class="ui-widget-content">
                     <img src="pics_vlckova/pic6.jpg" alt="pic6">
                 </div>
 
-                <div id="pic7" STYLE="position:absolute; TOP:100px; LEFT:80px;" class="ui-widget-content">
+                <div class="pic7" STYLE="position:absolute; TOP:100px; LEFT:80px;" class="ui-widget-content">
                     <img src="pics_vlckova/pic7.jpg" alt="pic7">
                 </div>
 
-                <div id="pic8" STYLE="position:absolute; TOP:30px; LEFT:140px;" class="ui-widget-content">
+                <div class="pic8" STYLE="position:absolute; TOP:30px; LEFT:140px;" class="ui-widget-content">
                     <img src="pics_vlckova/pic8.jpg" alt="pic8">
                 </div>
 
-                <div id="pic9" STYLE="position:absolute; TOP:40px; LEFT:180px;" class="ui-widget-content">
+                <div class="pic9" STYLE="position:absolute; TOP:40px; LEFT:180px;" class="ui-widget-content">
                     <img src="pics_vlckova/pic9.jpg" alt="pic9">
                 </div>
             </div>
