--- a/index.html
+++ b/index.html
@@ -8,9 +8,35 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
     <script src="script.js"></script>
-    <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+<nav aria-label="Breadcrumb" class="breadcrumb">
+    <ol>
+        <li>
+            <a href="../../">
+                WAI-ARIA Authoring Practices 1.1
+            </a>
+        </li>
+        <li>
+            <a href="../../#aria_ex">
+                Design Patterns
+            </a>
+        </li>
+        <li>
+            <a href="../../#breadcrumb">
+                Breadcrumb Pattern
+            </a>
+        </li>
+        <li>
+            <a href="./index.html" aria-current="page">
+                Breadcrumb Example
+            </a>
+        </li>
+    </ol>
+</nav>
 
 <ul id="menu" class="menu"></ul>
 
