--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 </head>
 <body>
 
+
+<h1>Vitajte ! <span class="color"> </span></h1>
+
 <ul id="menu" class="menu"></ul>
 
 <p id="counter" class="counter"></p>
