dizajn jak prasa vol.3

--- a/gajdos.html
+++ b/gajdos.html
@@ -17,7 +17,10 @@
 <p class="bio"> Moje meno je Alexander Gajdoš, pochádzam z obce Hosti,<br>
                 študujem 3. ročník na Fakulte elektrotechniky a informatiky STU v Bratislave.<br>
                 Medzi moje záľuby patrí čítanie kníh,hríby,poper,mko,tráva a alkohol samozrejme.
+
 </p>
+<h3 class="kontakt" >KONTAKT : xgajdosa1@stuba.sk</h3>
+<h3></h3>
 <img class="foto" src="gajdos.jpg">
 
 <ul id="menu" class="menu"></ul>
