--- a/gasparovic.html
+++ b/gasparovic.html
@@ -16,8 +16,10 @@
 <h1 class="meno" >Boris Gašparovič <span class="color"> </span></h1>
 <p class="bio">Moje meno je Boris Gašparovič, pochádzam z mesta Partizánske,<br>
                študujem 3. ročník na Fakulte elektrotechniky a informatiky STU v Bratislave.<br>
-               Moje záľuby sú hokej, video hry, hudba a čipsy.
+               Moje záľuby sú hokej, video hry, hudba a čipsy.<br>
+
 </p>
+<h3 class="kontakt" >KONTAKT : xgasparovicb@stuba.sk</h3>
 <img class="foto" src="gasparovic.jpg">
 
 <ul id="menu" class="menu"></ul>
