--- a/hra_vlckova.html
+++ b/hra_vlckova.html
@@ -26,6 +26,8 @@
 
     <script src="jquery.ui.touch-punch.min.js"></script>
 
+
+
 </head>
 
 <body>
@@ -90,5 +92,10 @@
         </div>
     </div>
 </div>
+<ul id="menu" class="menu"></ul>
+
+
+
+<script type="module" src="MenuComponent.js"></script>
 </body>
 </html>
