--- a/lasan.html
+++ b/lasan.html
@@ -18,6 +18,8 @@
                študujem 3. ročník na Fakulte elektrotechniky a informatiky STU v Bratislave.<br>
             Moje záľuby sú varenie gulášu, športovanie, restenie.
 </p>
+
+<h3 class="kontakt" >KONTAKT : xlasan@stuba.sk</h3>
 <img class="foto" src="lasan.jpg">
 
 <ul id="menu" class="menu"></ul>
