--- a/vlckova.html
+++ b/vlckova.html
@@ -17,7 +17,9 @@
 <p class="bio">Moje meno je Jana Vlčková , pochádzam z mesta Kysucké Nové Mesto,<br>
                študujem 3. ročník na Fakulte elektrotechniky a informatiky STU v Bratislave.<br>
                Moje záľuby sú čítanie kníh, počúvanie hudby, matematika a programovanie.
+
 </p>
+<h3 class="kontakt" >KONTAKT : xvlckovaj@stuba.sk</h3>
 <img class="foto" src="vlckova.jpg">
 
 <ul id="menu" class="menu"></ul>
