counter component added

--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
 
 <ul id="menu" class="menu"></ul>
 
-<p id="counter" class="counter"></p>
 
-<script type="module" src="MenuComponent.js"></script>
+<counter-component id="counterComponent" class="counter" count="1"></counter-component>
+
+<script type="module" src="CounterComponent.js"></script>
 </body>
 </html>
