--- a/gajdos.html
+++ b/gajdos.html
@@ -8,25 +8,23 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
     <script src="script.js"></script>
-    <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
 
 <h1 class="meno">Alexander Gajdoš <span class="color"> </span></h1>
-<p class="bio"> Moje meno je Alexander Gajdoš, pochádzam z obce Hosti,<br>
-                študujem 3. ročník na Fakulte elektrotechniky a informatiky STU v Bratislave.<br>
-                Medzi moje záľuby patrí čítanie kníh,hríby,poper,mko,tráva a alkohol samozrejme.
+<p class="bio">Moje meno je Alexander Gajdoš, no všetci ma poznajú pod prezývkou Šaňo. Som študent v 3. ročníku
+    Aplikovanej Informatiky na FEI-STU. Medzi moje záľuby patrí hudba, cestovanie, turistika a dobré jedlo.
 
 </p>
-<h3 class="kontakt" >KONTAKT : xgajdosa1@stuba.sk</h3>
-<h3></h3>
+<h3 class="kontakt"  >KONTAKT : gajdos.alexander206@gmail.com</h3>
 <img class="foto" src="gajdos.jpg">
 
 <ul id="menu" class="menu"></ul>
 
 
 
-<script type="module" src="MenuComponent.js"></script>
 </body>
 </html>
