--- a/hra_vlckova.html
+++ b/hra_vlckova.html
@@ -24,6 +24,8 @@
     <script src="hra_vlckova.js" type="text/javascript"></script>
     <link rel="stylesheet" href="hra_vlckova.css">
 
+    <script src="script.js"></script>
+
     <script src="jquery.ui.touch-punch.min.js"></script>
 
 
@@ -31,6 +33,7 @@
 </head>
 
 <body>
+
 <div class="fade">
     <div class="modal">
         <h1>PUZZLE DEMO</h1>
@@ -96,6 +99,5 @@
 
 
 
-<script type="module" src="MenuComponent.js"></script>
 </body>
 </html>
