--- a/checklist.html
+++ b/checklist.html
@@ -12,6 +12,15 @@
 </head>
 <body>
 
+<ul class="breadcrumbs">
+    <li class="breadcrumbs_item">
+        <a href="index.html" class="breadcrumbs_link ">Úvod</a>
+    </li>
+    <li class="breadcrumbs_item">
+        <a href="" class="breadcrumbs_link breadcrumbs_link--active">Checklist</a>
+    </li>
+</ul>
+
 <table>
     <tr>
         <th >Task</th>
@@ -52,7 +61,7 @@
     <tr>
         <td>Dizajn</td>
         <td></td>
-        <td></td>
+        <td>X</td>
         <td></td>
         <td>X</td>
     </tr>
