--- a/lasan.html
+++ b/lasan.html
@@ -13,6 +13,20 @@
 </head>
 <body>
 
+<ul class="breadcrumbs">
+    <li class="breadcrumbs_item">
+        <a href="index.html" class="breadcrumbs_link ">Úvod</a>
+    </li>
+    <li class="breadcrumbs_item">
+        <a href="" class="breadcrumbs_link ">Autori</a>
+    </li>
+    <li class="breadcrumbs_item">
+        <a href="lasan.html" class="breadcrumbs_link ">Lašan</a>
+    </li>
+    <li class="breadcrumbs_item">
+        <a href="" class="breadcrumbs_link breadcrumbs_link--active">O mne</a>
+    </li>
+</ul>
 
 <h1 class="meno" >Tomáš Lašan <span class="color"> </span></h1>
 <p class="bio">Moje meno je Tomáš Lašan, pochádzam z obce Mokrá Lúka,<br>
