--- a/vlckova.html
+++ b/vlckova.html
@@ -13,6 +13,20 @@
 </head>
 <body>
 
+<ul class="breadcrumbs">
+    <li class="breadcrumbs_item">
+        <a href="index.html" class="breadcrumbs_link ">Úvod</a>
+    </li>
+    <li class="breadcrumbs_item">
+        <a href="" class="breadcrumbs_link ">Autori</a>
+    </li>
+    <li class="breadcrumbs_item">
+        <a href="vlckova.html" class="breadcrumbs_link ">Vlčková</a>
+    </li>
+    <li class="breadcrumbs_item">
+        <a href="" class="breadcrumbs_link breadcrumbs_link--active">O mne</a>
+    </li>
+</ul>
 
 <h1 class="meno" >Jana Vlčková <span class="color"> </span></h1>
 <p class="bio">Moje meno je Jana Vlčková , pochádzam z mesta Kysucké Nové Mesto,<br>
