--- a/gajdos.html
+++ b/gajdos.html
@@ -13,6 +13,20 @@
 </head>
 <body>
 
+<ul class="breadcrumbs">
+    <li class="breadcrumbs_item">
+        <a href="index.html" class="breadcrumbs_link ">Úvod</a>
+    </li>
+    <li class="breadcrumbs_item">
+        <a href="" class="breadcrumbs_link ">Autori</a>
+    </li>
+    <li class="breadcrumbs_item">
+        <a href="gajdos.html" class="breadcrumbs_link ">Gajdos</a>
+    </li>
+    <li class="breadcrumbs_item">
+        <a href="" class="breadcrumbs_link breadcrumbs_link--active">O mne</a>
+    </li>
+</ul>
 
 <h1 class="meno">Alexander Gajdoš <span class="color"> </span></h1>
 <p class="bio">Moje meno je Alexander Gajdoš, no všetci ma poznajú pod prezývkou Šaňo. Som študent v 3. ročníku
