--- a/gasparovic.html
+++ b/gasparovic.html
@@ -13,6 +13,20 @@
 </head>
 <body>
 
+<ul class="breadcrumbs">
+    <li class="breadcrumbs_item">
+        <a href="index.html" class="breadcrumbs_link ">Úvod</a>
+    </li>
+    <li class="breadcrumbs_item">
+        <a href="" class="breadcrumbs_link ">Autori</a>
+    </li>
+    <li class="breadcrumbs_item">
+        <a href="gasparovic.html" class="breadcrumbs_link ">Gasparovic</a>
+    </li>
+    <li class="breadcrumbs_item">
+        <a href="" class="breadcrumbs_link breadcrumbs_link--active">O mne</a>
+    </li>
+</ul>
 
 <h1 class="meno" >Boris Gašparovič <span class="color"> </span></h1>
 <p class="bio">Moje meno je Boris Gašparovič, pochádzam z mesta Partizánske,<br>
