fixed breadcrumbs and whatever probably done

--- a/meniny.html
+++ b/meniny.html
@@ -12,6 +12,17 @@
 
 </head>
 <body onLoad="curDate();">
+
+
+<ul class="breadcrumbs">
+    <li class="breadcrumbs_item">
+        <a href="index.html" class="breadcrumbs_link ">Úvod</a>
+    </li>
+    <li class="breadcrumbs_item">
+        <a href="meniny.html" class="breadcrumbs_link breadcrumbs_link--active">Meniny</a>
+    </li>
+</ul>
+
 <script src="aktualny_datum.js"></script>
 <ul id="menu" class="menu"></ul>
 
