--- a/hra_gajdos.html
+++ b/hra_gajdos.html
@@ -12,8 +12,26 @@
     <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
     <link rel="stylesheet" href="style.css">
 
+
 </head>
 <body>
+
+<ul class="breadcrumbs">
+    <li class="breadcrumbs_item">
+        <a href="index.html" class="breadcrumbs_link ">Úvod</a>
+    </li>
+    <li class="breadcrumbs_item">
+        <a href="" class="breadcrumbs_link ">Autori</a>
+    </li>
+    <li class="breadcrumbs_item">
+        <a href="gajdos.html" class="breadcrumbs_link ">Gajdos</a>
+    </li>
+    <li class="breadcrumbs_item">
+        <a href="hra_gajdos.html" class="breadcrumbs_link breadcrumbs_link--active">Hra</a>
+    </li>
+</ul>
+
+
 <script src="hra_gajdos.js"></script>
 <ul id="menu" class="menu"></ul>
 
