--- a/gasparovic_hra.html
+++ b/gasparovic_hra.html
@@ -13,6 +13,8 @@
     <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
     <link rel="stylesheet" href="gasparovic_styles.css">
     <script src="gasparovic_script.js"></script>
+    <link rel="stylesheet" href="style.css">
+
 
 </head>
 <body class="wrapper">
@@ -33,7 +35,7 @@
 </ul>
 
     <div id="container">
-        <div id="pieceContainer"></div>
+<!--        <div id="pieceContainer"></div>-->
         <img src="gasparovic_obrazky/pokemon-head-1-png.png" height="200" width="268" id="pokemon_head_1" alt="piece_1" class="piece_1"/>
         <img src="gasparovic_obrazky/pokemon-head-2-png.png" height="165.5" width="245.5" id="pokemon_head_2" alt="piece_2" class="piece_2"/>
         <img src="gasparovic_obrazky/pokemon-left-foot-png.png" height="112.5" width="74.5" id="left_foot" alt="piece_3" class="piece_3"/>
