--- a/hra_lasan.html
+++ b/hra_lasan.html
@@ -16,7 +16,6 @@
 
 <ul id="menu" class="menu"></ul>
 
-
 <div class="container">
 
     <div class="skaldacka" id="skladacka">
@@ -47,15 +46,16 @@
 
     </div>
 
-    <div class="casovac" id="casovac">
 
 
-        <div id="output"></div>
-
-    </div>
+    <p id="timer"></p>
+    <p id="alert"></p>
+    <button id="reset">RESET</button>
 
 </div>
+
 <script src="hra_lasan.js"></script>
+<script src="https://code.jquery.com/jquery-3.5.0.js%22%3E</script>
 
 </body>
 </html>
